Moving the baseline to Java 17 / Jakarta EE 10 (#739)
* Fixing Maven's `relativePath`s.

Signed-off-by: Jacek Bilski <jacek@bilski.tech>

* Switching to Java 17.

Signed-off-by: Jacek Bilski <jacek@bilski.tech>

* Dropping Jakarta EE 8 RESTEasy tests, there are already Jakarta EE 9+ versions available.

Signed-off-by: Jacek Bilski <jacek@bilski.tech>

* Bringing back Jakarta EE 9 Jersey integration test and deleting Jakarta EE 8 version.

Signed-off-by: Jacek Bilski <jacek@bilski.tech>

* Upgrading Spring integration test to Jakarta EE 9+.

Signed-off-by: Jacek Bilski <jacek@bilski.tech>

* Upgrading cloudevents-spring-boot-example to Jakarta EE 9+.

Signed-off-by: Jacek Bilski <jacek@bilski.tech>

* Upgrading cloudevents-restful-ws-quarkus-example to Jakarta EE 9+, upgrading Quarkus to the newest 3.x version.

Signed-off-by: Jacek Bilski <jacek@bilski.tech>

* Removing all Jakarta EE 8 code and examples.

Signed-off-by: Jacek Bilski <jacek@bilski.tech>

* Applied OpenRewrite recipe "Migrate to Java 17".

Signed-off-by: Jacek Bilski <jacek@bilski.tech>

* Upgrading Spring Boot to the newest 3.x version.

Signed-off-by: Jacek Bilski <jacek@bilski.tech>

* Upgrading Jersey to the newest 3.1.x version.

Signed-off-by: Jacek Bilski <jacek@bilski.tech>

* Upgrading RESTEasy to the newest 6.2.x version.

Signed-off-by: Jacek Bilski <jacek@bilski.tech>

* Upgrading Vert.x to the newest 4.x version.

Signed-off-by: Jacek Bilski <jacek@bilski.tech>

* Upgrading Jetty to the newest 12.1.x version.

Signed-off-by: Jacek Bilski <jacek@bilski.tech>

* Upgrading to Jakarta EE 10.

Signed-off-by: Jacek Bilski <jacek@bilski.tech>

* Upgrading Apache Kafka to the newest version.

Signed-off-by: Jacek Bilski <jacek@bilski.tech>

* Random improvements.

Signed-off-by: Jacek Bilski <jacek@bilski.tech>

* Fixing rebase issue.

Signed-off-by: Jacek Bilski <jacek@bilski.tech>

* Fixing Jetty sample - also calling `callback.succeed()` when no body is provided. This was also found by a codi